HW3/javali_tests/othertests/A3_team/ObjectClass.javali.err
Debug information for file: javali_tests/othertests/A3_team/ObjectClass.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | Seq ()
ClassDecl (name: Object, superClass: Object)
| VarDecl (name: a, type: int)
Error message from reference is: OBJECT_CLASS_DEFINED
Error message: CIRCULAR_INHERITANCE

Phase semantic failed because we expected to see:
OBJECT_CLASS_DEFINED
But we actually saw:
CIRCULAR_INHERITANCE
The difference is:
At line   1 /   1:
< OBJECT_CLASS_DEFINED
> CIRCULAR_INHERITANCE

