HW3/javali_tests/othertests/A3_team/ObjectClass.javali
class Main {
    void main() {}
}

class Object {
    int a;
}